# graph-library-cpp

./: .gitignore  CMakeLists.txt  README.MD
include/graph/algorithms/bellman_ford/: bellman_ford.hpp
include/graph/algorithms/bfs/: bipartite_checker.hpp  breadth_first_search.hpp  components.hpp  level_order_traversal.hpp
include/graph/algorithms/dfs/: articulation_points.hpp  biconnected_components.hpp  bipartite_checker.hpp  bridges.hpp  components.hpp  cycle_detection.hpp  depth_first_search.hpp  graph_condensation.hpp  topological_sort.hpp
include/graph/algorithms/dijkstra/: astar.hpp  dijkstra.hpp  dijkstra_faster.hpp
include/graph/algorithms/flow/: dinic.hpp  edmonds_karp.hpp  flow_algorithm.hpp  ford_fulkerson.hpp
include/graph/algorithms/floyd/: floyd.hpp  graph_metrics.hpp  negative_cycle_detector.hpp  transitive_closure.hpp
include/graph/algorithms/matching/: edmonds_matching.hpp  hopcroft_karp_matching.hpp  kuhn_matching.hpp  matching_algorithm.hpp
include/graph/algorithms/mst/: kruskal.hpp  prim.hpp
include/graph/parallel_algorithms/bfs/: parallel_breadth_first_search.hpp  parallel_connected_components.hpp
include/graph/parallel_algorithms/dijkstra/: parallel_dijkstra.hpp
include/graph/parallel_algorithms/page_rank/: page_rank_web_google.cpp  parallel_page_rank.hpp  parallel_page_rank_optimized.hpp  results_page_rank_web_google.txt
include/graph/structure/: csr_graph.hpp  csr_graph_builder.hpp  directed_adjacency_list.hpp  directed_adjacency_matrix.hpp  directed_edge_list.hpp  error_policy.hpp  graph_base.hpp  graph_converter.hpp  graph_exceptions.hpp  graph_options.hpp  multigraph.hpp  undirected_adjacency_list.hpp  undirected_adjacency_matrix.hpp  undirected_edge_list.hpp
include/graph/visualization/: graph_exporter.hpp  mst_comparison_visualization.cpp  mst_comparison_visualization_2.cpp  mst_visualization.cpp  multigraph_exporter.hpp  save_graph_image.cpp  test_graph_export.cpp
mst_visualization/: complete_road_network.dot  different_mst_comparison.dot  different_mst_original.dot  mst_comparison.dot  road_network.dot  road_network_mst.dot  road_network_prim.dot
page_rank_visualization/: visualize.py
page_rank_visualization/data/: pagerank_top1000.csv  performance.csv
six_handshakes/: results_soc_distance_analysis.txt  soc_distance_analysis.cpp  visualize.py
six_handshakes/data/: cumulative_distribution.csv  distance_distribution.csv
tests/tests_bellman_ford/: test_advanced.cpp  test_base.cpp
tests/tests_bfs/: test_base.cpp  test_bipartite_checker.cpp  test_components.cpp  test_level_order_traversal.cpp
tests/tests_dfs/: test_articulation_points.cpp  test_base.cpp  test_biconnected_components.cpp  test_bipartite_checker.cpp  test_bridges.cpp  test_components.cpp  test_condensation.cpp  test_cycles.cpp  test_topological_sort.cpp
tests/tests_dijkstra/: test_astar.cpp  test_base.cpp  test_dijsktra_faster.cpp
tests/tests_flow/: test_dinic.cpp  test_edmonds_karp.cpp  test_ford_fulkerson.cpp
tests/tests_floyd/: test_base.cpp  test_transitive_closure_metrics_negative_cycle.cpp
tests/tests_matching/: test_edmonds.cpp  test_hopcroft_karp.cpp  test_kuhn.cpp
tests/tests_mst/: test_kruskal.cpp  test_kruskal_advanced.cpp  test_prim.cpp  test_prim_advanced.cpp
tests/tests_parallel_bfs/: test_parallel_bfs.cpp  test_parallel_components.cpp
tests/tests_parallel_dijkstra/: test_parallel_dijkstra.cpp
tests/tests_parallel_page_rank/: test_parallel_page_rank.cpp  test_parallel_page_rank_optimized.cpp
tests/tests_structure/: test_converter.cpp  test_directed_adjacency_list.cpp  test_directed_adjacency_matrix.cpp  test_directed_edge_list.cpp  test_undirected_adjacency_list.cpp  test_undirected_adjacency_matrix.cpp  test_undirected_edge_list.cpp
